# integrations-management

./: AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  integrations-management.code-workspace
azure/integration_quickstart/: README.md  build.sh  pyproject.toml  pytest.ini
azure/integration_quickstart/common/workflow/: reporter.py
azure/integration_quickstart/src/: setup.py
azure/integration_quickstart/src/azure_integration_quickstart/: actions.py  app_registration_quickstart.py  constants.py  lfo_quickstart.py  log_forwarding_quickstart.py  main.py  permissions.py  quickstart.py  quickstart_shared.py  role_assignments.py  scopes.py  script_status.py  setup.py  types.py  user_selections.py  util.py  utils.py
azure/integration_quickstart/tests/: dd_test_case.py  test_actions.py  test_app_registration_quickstart.py  test_data.py  test_permissions.py  test_quickstart_shared.py  test_scopes.py  test_script_status.py  test_user_selections.py  test_util.py
azure/logging_install/: .python-version  README.md  __init__.py  __main__.py  az_cmd.py  build.sh  configuration.py  constants.py  deploy.py  errors.py  main.py  migrate_to_container_apps.py  pyproject.toml  pytest.ini  resource_setup.py  role_setup.py  setup.py  validation.py
azure/logging_install/bicep/: README.md  azuredeploy.bicep  control_plane.bicep  control_plane.json  createUiDefinition.json  forwarder.bicep  subscription_permissions.bicep
azure/logging_install/src/azure_logging_install/: __init__.py  __main__.py  az_cmd.py  configuration.py  constants.py  deploy.py  errors.py  existing_lfo.py  (+5 more)
azure/logging_install/tests/: conftest.py  test_az_cmd.py  test_configuration.py  test_data.py  test_deploy.py  test_existing_lfo.py  test_main.py  test_resource_setup.py  test_role_setup.py  test_validation.py
gcp/onboarding/: pyproject.toml  setup.py  setup_test.py
(+354 files in other folders)
