[project]
name = "azure-logging-install"
version = "0.1.0"
requires-python = ">= 3.5"
dependencies = []

[project.optional-dependencies]
dev = ["pytest==6.1.2", "flake8==3.9.2"]

[build-system]
requires = ["setuptools>=28.8.0", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["**/__pycache__", "*.egg-info", ".*/", "config", "build"]
