[project]
name = "gcp-onboarding"
version = "0.1.0"
requires-python = ">= 3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest==8.3.5", "ruff==0.12.1"]

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["**/__pycache__", "*.egg-info", ".*/", "config", "build"]